# Avara

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  LICENSE.txt  Makefile  Makefile.legacy  README.md  build.zig  build.zig.zon  classic-mix-up.pict  deploy.bash  deploy_rsa  meson.build  sdk.zig  travis-windows.ps1  vcpkg.json
.github/workflows/: avara-beta.yml  avara-ci.yml  greetings.yml
Avara.msvc/: Avara.sln  Avara.vcxproj  Avara.vcxproj.filters  AvaraCore.vcxproj  AvaraCore.vcxproj.filters  Tests.vcxproj
Avara.xcodeproj/: project.pbxproj
bsps/: 100.json  101.json  102.json  200.json  201.json  202.json  203.json  204.json  205.json  206.json  207.json  208.json  210.json  211.json  212.json  215.json  216.json  217.json  220.json  230.json  240.json  250.json  251.json  252.json  300.json  3001.json  310.json  311.json  400.json  401.json  411.json  421.json  422.json  431.json  432.json  433.json  441.json  451.json  460.json  461.json  (+56 more)
classic-mix-up/LEDI/: 128
classic-mix-up/PICT/: 1000  1001  1002  1003
classic-mix-up/TMPL/: 131
classic-mix-up/vers/: 1  2
cmake_modules/: FindSDL2.cmake  FindSDL2_NET.cmake  TargetCopyFiles.cmake
editor/: .gitignore  avarascript_parser.js  avarascript_parser.pegjs  bspviewer.html  bspviewer.js  default.avarascript  editor.js  index.html
levels/: 4-isles.r  Crescent.r  IYA.r  a-bridge-too-far.r  aa-abnormal.r  aa-deux-abnormal.r  aa-deux-normal.r  aa-normal.r  aa-tre.r  aftershock.r  alakuloinen.r  as-00-a.r  as-00-b.r  berserkir-fury.r  blockparty.r  butternut-squash.r  c1-archaeology.r  c1-architecture.r  c1-misc-net.r  c1-moving-parts.r  cancer.r  carbon-v2.r  catraps-net-levels.r  classic-mix-up.r  clockwork-blue-b4.r  cnemies-squares.r  dildensburg.r  disk-o-tech-light.r  dodgeball.r  elektronickou-v2.r  emotion.r  fishrack-syndrome.r  fosfori.r  golden-sky.r  gunz.r  gzr - Balledness!.r  gzr - Geriatric Ward.r  gzr - Grecian Formula.r  gzr - Liver Spots.r  gzr - Over the Hill.r  (+36 more)
levels/20XX/: set.json
levels/4-isles/: set.json
levels/a-bridge-too-far/: set.json
levels/aa-abnormal/: default.avarascript  set.json
levels/aa-deux-abnormal/: default.avarascript  set.json
levels/aa-deux-normal/: set.json
levels/aa-normal/: set.json
levels/aa-tre/: set.json
levels/aftershock/: default.avarascript.ignore
levels/alakuloinen/: set.json
levels/as-00-a/: set.json
levels/as-00-b/: set.json
levels/avara-hi-rez/: default.avarascript  set.json
levels/avaraline-2021-quirks-mode/: default.avarascript  set.json
levels/avaraline-2021-strict-mode/: default.avarascript  set.json
levels/avaraline-quirks-mode/: default.avarascript  set.json
levels/avaraline-strict-mode/: set.json
levels/berserkir-fury/: set.json
levels/blockparty/: default.avarascript  set.json
levels/butternut-squash/: set.json
levels/c1-archaeology/: set.json
levels/c1-architecture/: default.avarascript  set.json
levels/c1-misc-net/: set.json
levels/c1-moving-parts/: set.json
levels/cancer/: set.json
levels/carbon-v2/: set.json
levels/catraps-net-levels/: default.avarascript  set.json
levels/classic-mix-up/: set.json
levels/clockwork-blue-b4/: set.json
levels/cnemies-squares/: default.avarascript  set.json
levels/crescent/: set.json
levels/crooked-rain/: set.json
levels/dildensburg/: default.avarascript  set.json
levels/disk-o-tech-light/: default.avarascript  set.json
levels/dodgeball/: set.json
levels/elektronickou-v2/: default.avarascript  set.json
levels/emotion/: default.avarascript  set.json
levels/fishrack-syndrome/: default.avarascript  set.json
levels/fosfori/: default.avarascript  set.json
levels/golden-sky/: set.json
levels/gunz/: default.avarascript
levels/gunz-v3/: default.avarascript  set.json
levels/gzr-balledness/: set.json
levels/gzr-geriatric-ward/: set.json
levels/gzr-grecian-formula/: set.json
levels/gzr-liver-spots/: default.avarascript  set.json
levels/gzr-over-the-hill/: set.json
levels/gzr-rip/: set.json
levels/holy-hand-grenades/: default.avarascript  set.json
levels/hunting-grounds/: set.json
levels/iya/: set.json
levels/kalium/: default.avarascript  set.json
levels/klaus-levels/: default.avarascript  set.json
levels/macabre/: set.json
levels/medievos/: default.avarascript  set.json
levels/net-99/: default.avarascript  set.json
levels/net-levels/: set.json
levels/new-moon/: default.avarascript  set.json
levels/not-aa/: default.avarascript  set.json
levels/oddities-v4/: default.avarascript  set.json
levels/pastabravo/: default.avarascript  set.json
levels/pheel/: set.json
levels/quicksilver/: set.json
levels/scarlet-pimpernel-beta-0919/: set.json
levels/single-player/: default.avarascript  set.json
levels/someset/: set.json
levels/speeders/: default.avarascript  set.json
levels/strawberry/: default.avarascript  set.json
levels/symbiosis/: set.json
levels/t-plus-5-part-a/: set.json
levels/t-plus-5-part-b/: set.json
levels/t-plus-5-part-c/: set.json
levels/the-codex/: set.json
levels/the-lexicon/: set.json
levels/thought.xii/: set.json
levels/tyyli/: set.json
levels/we-be-ground-pounders/: set.json
levels/wide-open/: set.json
levels/wild-west-collection/: set.json
levels/wrestling/: set.json
levels/wut/: set.json
platform/macos/: Avara.icns  Info.plist  MetalShaderTypes.h  avara.metal
platform/win/: appicon.rc
platform/windows/: version.rc
rsrc/: Avara.r  default.avarascript  objects.json  options.json  set.json
rsrc/aftershock/: default.avarascript  set.json
rsrc/bsps/: 100.json  101.json  102.json  190.json  191.json  192.json  200.json  201.json  202.json  203.json  204.json  205.json  206.json  207.json  208.json  210.json  211.json  212.json  215.json  216.json  217.json  220.json  230.json  240.json  (+81 more)
shaders/: avara_frag.glsl  avara_vert.glsl  sky_frag.glsl  sky_vert.glsl  skytexture_frag.glsl  skytexture_vert.glsl
src/: Avara.cpp  AvaraLevelViewer.cpp  BSPViewer.cpp  fixed.cpp  frandom.cpp  hsnd2wav.cpp  tests.cpp
(+2032 files in other folders)
